--- a/Class 12/style.css
+++ b/Class 12/style.css
@@ -12,6 +12,7 @@
     /* top: 60%; */
     /* bottom: 0; */
     top: 0;
+    z-index: 2;
 }
 .sec p{
     font-size: 22px;
@@ -29,8 +30,9 @@
 }
 .whatsapp_img{
     position: fixed;
-    bottom: 4%;
+    top: 4%;
     right: 5%;
+    z-index: 3;
 }
 
 /* .bg_img{
